# APEX

./: .gitignore  APEX_CREATION_GUIDE.md  INDEX.md  INTAKE_WORKFLOW.md  LICENSE  README.md  apex_state.yaml
algorithms/claude-cookbooks/src/managed_agents/: .gitignore  CMA_explore_unfamiliar_codebase.ipynb  CMA_gate_human_in_the_loop.ipynb  CMA_iterate_fix_failing_tests.ipynb  CMA_operate_in_production.ipynb  CMA_orchestrate_issue_to_pr.ipynb  CMA_prompt_versioning_and_rollback.ipynb  README.md  pyproject.toml  sre_incident_responder.ipynb  utilities.py
algorithms/claude-cookbooks/src/managed_agents/example_data/: OVERVIEW.md
algorithms/uco-sensor/sensor-api/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
algorithms/uco-sensor/sensor-api/apex_integration/: __init__.py  connector.py  event_bus.py  templates.py
algorithms/uco-sensor/sensor-api/api/: __init__.py  server.py
algorithms/uco-sensor/sensor-api/ci/: __init__.py  action_entrypoint.py  uco-pr-check.yml
algorithms/uco-sensor/sensor-api/demo/: demo_full.py  uco-report.html
algorithms/uco-sensor/sensor-api/governance/: __init__.py  policy_engine.py  trend_engine.py
algorithms/uco-sensor/sensor-api/iac/: __init__.py  iac_scanner.py
algorithms/uco-sensor/sensor-api/lang_adapters/: __init__.py  base.py  c_family.py  csharp.py  domain_langs.py  functional_langs.py  generic.py  golang.py  java.py  javascript.py  kotlin.py  modern_systems.py  php.py  python_adapter.py  registry.py  ruby.py  rust.py  scala.py  scripting_langs.py  swift.py
algorithms/uco-sensor/sensor-api/metrics/: __init__.py  architecture_analyzer.py  extended_vectors.py  performance_analyzer.py
algorithms/uco-sensor/sensor-api/report/: __init__.py  badge.py  html_report.py  sarif.py  webui.py
algorithms/uco-sensor/sensor-api/sast/: __init__.py  regex_analyzer.py  scanner.py  taint_engine.py
algorithms/uco-sensor/sensor-api/sca/: __init__.py  cve_database.py  vulnerability_scanner.py
algorithms/uco-sensor/sensor-api/scan/: __init__.py  git_history_scanner.py  incremental_scanner.py  repo_scanner.py
algorithms/uco-sensor/sensor-api/sensor_core/: __init__.py  advanced_metrics.py  auto_analyzer.py  explainer.py  predictor.py  uco_bridge.py
algorithms/uco-sensor/sensor-api/sensor_storage/: __init__.py  snapshot_store.py
algorithms/uco-sensor/sensor-api/tests/: test_calibration.py  test_marco1.py  test_marco2.py  test_marco3.py  test_marco4.py  test_marco5.py  test_marco6.py  test_marco7.py  test_marco8.py  test_marco_m1.py  test_marco_m10.py  test_marco_m11.py  test_marco_m12.py  test_marco_m13.py  test_marco_m14.py  test_marco_m15.py  test_marco_m16.py  test_marco_m17.py  test_marco_m18.py  test_marco_m19.py  test_marco_m2.py  test_marco_m20.py  test_marco_m3.py  test_marco_m4.py  test_marco_m5.py  test_marco_m6.py  test_marco_m7.py  test_marco_m8.py  test_marco_m9.py
algorithms/uco-sensor/sensor-api/validation/: analyze_real_history.py  extract_repo_history.py  validate_real_repos.py  validation_report.json
meta/: anchors.yaml  (+2 more)
(+8023 files in other folders)
