[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "uco-sensor"
version     = "0.7.0"
description = "Spectral code-quality API powered by UCO v4 + FrequencyEngine"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
  "code-quality", "static-analysis", "spectral-analysis",
  "hamiltonian", "uco", "apex"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "PyWavelets>=1.4.0",
]

[project.optional-dependencies]
parsers = [
  "tree-sitter>=0.21.0",
  "tree-sitter-python>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
  "tree-sitter-java>=0.21.0",
  "tree-sitter-go>=0.21.0",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
all = [
  "uco-sensor[parsers,dev]",
]

[project.urls]
Homepage      = "https://github.com/thiagofernandes1987-create/APEX"
Repository    = "https://github.com/thiagofernandes1987-create/APEX"
Documentation = "https://github.com/thiagofernandes1987-create/APEX/tree/main/algorithms/uco-sensor"
Issues        = "https://github.com/thiagofernandes1987-create/APEX/issues"

[project.scripts]
uco-sensor = "cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = [
  "sensor_core*", "sensor_storage*", "api*",
  "lang_adapters*", "apex_integration*", "scan*", "report*",
]
exclude = ["tests*", "validation*"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.yaml", "*.yml"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_marco*.py", "test_marco_m1.py", "test_calibration.py", "test_performance.py"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["sensor_core", "sensor_storage", "api", "lang_adapters",
           "apex_integration", "scan", "report"]
omit    = ["tests/*", "validation/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
